--- a/LearningSystem.Web/LearningSystem.Web/appsettings.json
+++ b/LearningSystem.Web/LearningSystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LearningSystem.Web-80886C52-D84A-4AA8-B71D-09257AD808A4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=LearningSystemDb;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
