--- a/LearningSystem.Web/LearningSystem.Web/LearningSystem.Web.csproj
+++ b/LearningSystem.Web/LearningSystem.Web/LearningSystem.Web.csproj
@@ -24,6 +24,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LearningSystem.Data\LearningSystem.Data.csproj" />
+    <ProjectReference Include="..\LearningSystem.Services\LearningSystem.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Blog\Controllers\" />
+    <Folder Include="Areas\Blog\Data\" />
+    <Folder Include="Areas\Blog\Models\" />
+    <Folder Include="Areas\Blog\Views\" />
   </ItemGroup>
 
 </Project>
